--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ py==1.11.0
 pyparsing==3.0.6
 pytest==6.2.5
 pytest-django==4.4.0
+python-dateutil~=2.8.2
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 sgmllib3k==1.0.0
